<resources>
    <string name="app_name">hospital_app</string>

    <string name="gohome">返回</string>
    <!-- Strings related to login -->
    <string name="prompt_email">+86</string>
    <string name="hint_account">请输入手机号</string>
    <string name="hint_password">请输入密码</string>
    <string name="Mobile_code_msg">手机号仅适用登录或找回密码</string>
    <string name="prompt_password">登录密码</string>
    <string name="action_sign_in">一键登录</string>
    <string name="action_luguo">路过</string>
    <string name="action_login">登录</string>
    <string name="action_registe">注册</string>
    <string name="action_rember_pass">记住密码</string>
    <string name="action_forget_pass">忘记密码？</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">此处应输入手机号</string>
    <string name="error_invalid_password">密码太短</string>
    <string name="error_incorrect_password">密码错误</string>
    <string name="error_field_required">此处必填</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="person_bar1">个人信息</string>
    <string name="person_bar1_name">姓名</string>
    <string name="person_bar1_sex">性别</string>
    <string name="person_bar1_age">年龄</string>
    <string name="person_bar1_city">城市</string>
    <string name="person_bar1_yishen">医生专业信息</string>
    <string name="person_bar1_jianjie">简介</string>
    <string name="person_bar1_zhichen">职称</string>
    <string name="person_bar1_techang">专业特长</string>
    <string name="person_bar1_yiyuan">医院</string>
    <string name="person_bar1_keshi">科室</string>
    <string name="person_bar1_case">成功案例</string>
    <string name="Button_submit">提交</string>
    <string name="Msg_hint">此处为提示信息</string>

    <string name="main_guahao">挂号</string>
    <string name="main_huifang">回访</string>
    <string name="main_wenzhen">问诊</string>
    <string name="main_illness">疾病查询</string>
</resources>
