<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center_horizontal"
    android:orientation="vertical" android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context=".LoginActivity"
    android:paddingTop="@dimen/activity_vertical_margin">

    <!-- Login progress -->

    <ProgressBar android:id="@+id/login_progress" style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_marginBottom="8dp" android:visibility="gone" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@mipmap/reg_title">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageButton"
            android:background="@mipmap/go_return"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gohome"
            android:id="@+id/textView14"
            android:textColor="#FFFFFF"
            android:textSize="20dp"
            android:layout_marginTop="10dp"
            android:textIsSelectable="true" />

    </GridLayout>

    <ScrollView android:id="@+id/login_form" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout android:id="@+id/email_login_form" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:orientation="vertical">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/prompt_email"
                    android:id="@+id/textView15"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="10dp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:ems="10"
                    android:id="@+id/email"
                    android:hint="@string/hint_account" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/prompt_password"
                    android:id="@+id/textView16" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:id="@+id/password"
                    android:hint="@string/hint_password" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/action_rember_pass"
                    android:id="@+id/checkBox_rember_pass"
                    android:contextClickable="false"
                    android:elegantTextHeight="false"
                    android:layout_alignParentLeft="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/action_forget_pass"
                    android:id="@+id/textView_forget"
                    android:layout_alignParentRight="true"
                    android:textColor="#000000"
                    android:textColorLink="#0000ff" />
            </RelativeLayout>

            <Button android:id="@+id/email_sign_in_button" style="?android:textAppearanceSmall"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:layout_marginTop="16dp" android:text="@string/action_login"
                android:textStyle="bold" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_luguo"
                android:id="@+id/button_dire"
                android:singleLine="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView_error_msg"
                android:visibility="visible"
                android:text="@string/Mobile_code_msg"
                android:singleLine="true"
                android:textColor="@android:color/darker_gray"
                android:layout_gravity="right"
                android:layout_marginRight="5dp" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
